jewel-datagrid: fix double border style around DG also strange box-shadow in items caused from jewel.item inheritance

--- a/frameworks/themes/JewelTheme/src/main/sass/components-primary/_datagrid.sass
+++ b/frameworks/themes/JewelTheme/src/main/sass/components-primary/_datagrid.sass
@@ -23,11 +23,11 @@
 .jewel.datagrid
     @if $flat
         background: lighten($default-color, 15%)
-        border: 1px solid $default-color
+        border-bottom: 1px solid $default-color
         box-shadow: none
     @else
         background: linear-gradient(lighten($default-color, 15%), lighten($default-color, 10%))
-        border: 1px solid darken($default-color, 15%)
+        border-bottom: 1px solid darken($default-color, 15%)
         box-shadow: inset 0 1px 0 lighten($default-color, 20%)
         border-radius: $border-radius
 
@@ -52,7 +52,7 @@
                 border-bottom-right-radius: 0
     
     .listarea
-        border-top-width: 1px
+        border-top-width: 0px
         border-left-width: 0px
         border-right-width: 0px
         border-bottom-width: 0px
@@ -81,7 +81,7 @@
             border-radius: 0px
             border-bottom-width: 0px
             @if not $flat
-                box-shadow: inset 0px .5px 0px 0px rgba(0,0,0,0.25)
+                box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.1)
             @else
                 box-shadow: none
 
@@ -100,6 +100,7 @@
                 border-bottom: 1px solid lighten($default-color, 8%)
                 border-right: 0
                 border-radius: 0
+                box-shadow: none
                 
                 &.primary
                     &.hovered
